--- a/2video.html
+++ b/2video.html
@@ -1,3 +1,4 @@
+<center>
 <video id="myVideo" class="wp-block-video" controls src="https://cdn.videy.co/Q2oen3ug.mp4"></video>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
@@ -13,3 +14,4 @@
     });
   });
 </script>
+</center>
