--- a/6phtoto.html
+++ b/6phtoto.html
@@ -1,5 +1,5 @@
 <center>
-<p><img src="blob:https://www.facebook.com/23f6f271-b968-496b-b6a8-1e14083b3c47" alt="loading"></p>
+<p><img src="https://www.facebook.com/23f6f271-b968-496b-b6a8-1e14083b3c47" alt="loading"></p>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     var videoElement = document.getElementById('myVideo');
